Alomost finish get routes handler
